# lifeoc-events

./: .env.example  Cargo.toml  Makefile  serverless.yml
src/: cms.rs  event.rs  main.rs  parser.rs
