[package]
name = "lifeoc-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = "0.4.31"
futures = "0.3.30"
lambda_http = "0.9.0"
reqwest = { version = "0.11.23", features = ["json"] }
select = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
